tests/diagnostics/undefined_variable.stderr
error[E0100]: 未定義の変数です
 --> tests/diagnostics/undefined_variable.kal:2:17
  |
2 | fn f() -> i32 = x;
  |                 ^
1 個のエラーで中断しました
